Add '24w45a' sources